deploy/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: applying-service-standards-staging
  labels:
    app: applying-service-standards-staging
spec:
  ports:
  - port: 3052
    name: http
  selector:
    app: applying-service-standards-staging
